--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,6 +6,6 @@
     <title>Nep huiswerkopdracht</title>
 </head>
 <body>
-
+<h1>Super mooie titel</h1>
 </body>
 </html>
